changed mode of payment to payment and balance in detail_reservation.html and edit_reservation.html

--- a/manager/reservation/detail_reservation.html
+++ b/manager/reservation/detail_reservation.html
@@ -227,10 +227,10 @@
                             </div>
                         </div>
                     </div>
-                    <!-- billing information  -->
+                    <!-- payment and balance card  -->
                     <div class="card mt-5">
                         <div class="card-header fw-bold h5">
-                            Reservation Details
+                            Payment and Balance
                         </div>
                         <div class="card-body">
                             <!-- 
@@ -248,25 +248,25 @@
                                   <input type="text" readonly class="form-control-plaintext" id="" value="Credit Card">
                                 </div>
                             </div> 
-                            <!-- expiration date  -->
+                            <!-- starting balance  -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Expiration Date</label>
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Starting Balance</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="2028/04/02">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="3000">
                                 </div>
                             </div> 
-                            <!-- cvv / cvc  -->
+                            <!-- paid  -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">CVV / CVC</label>
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Paid</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="123">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="Downpayment">
                                 </div>
                             </div> 
-                            <!-- billing address  -->
+                            <!-- balance  -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Billing Address</label>
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Balance</label>
                                 <div class="col-sm-10">
-                                    <input type="text" readonly class="form-control-plaintext" id="" value="123 Main Street Citytown, ST 12345 United States">
+                                    <input type="text" readonly class="form-control-plaintext" id="" value="2100">
                                 </div>
                             </div> 
                         </div>
