--- a/manager/reservation/detail_reservation.html
+++ b/manager/reservation/detail_reservation.html
@@ -185,7 +185,14 @@
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Check-Out Date</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="2023/08/02">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="2023/08/04">
+                                </div>
+                            </div> 
+                             <!-- number of days  -->
+                             <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Number of Days</label>
+                                <div class="col-sm-10">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="2">
                                 </div>
                             </div> 
                             <!-- number of adults  -->
@@ -223,6 +230,13 @@
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Room Type</label>
                                 <div class="col-sm-10">
                                   <input type="text" readonly class="form-control-plaintext" id="" value="Deluxe">
+                                </div>
+                            </div>
+                             <!-- room number  -->
+                             <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Number</label>
+                                <div class="col-sm-10">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="401">
                                 </div>
                             </div>
                         </div>
@@ -274,8 +288,8 @@
 
                     <!-- buttons  -->
                     <div class="d-grid gap-2 mt-5">
-                        <button class="btn btn-primary" type="button">Edit</button>
-                        <button class="btn btn-danger" type="button">Delete</button>
+                        <a href="#" class="btn btn-primary" type="button">Edit</a>
+                        <a href="#" class="btn btn-danger" type="button">Delete</a>
                     </div>
                 </div>
             </div>
