minor changes in login_manager.html and login_receptionist.html"

--- a/login_manager.html
+++ b/login_manager.html
@@ -28,16 +28,16 @@
                             <div class="d-flex justify-content-center">
                                 <h4>Welcome Back!</h4>
                             </div>
-                            <form action="">
+                            <form>
                                 <input type="text" name="" id="" class="form-control my-4 py-2 mx-auto custom-input" placeholder="Username">
-                                <input type="password" name="" id="password" class="form-control mx-auto my-4 py-2 custom-input" placeholder="Password">
+                                <input type="password" name="" id="" class="form-control my-4 py-2 mx-auto custom-input" placeholder="Password">
                                 <div class="form-check custom-input mx-auto my-4 py-2">
                                     <input type="checkbox" class="form-check-input " id="showPassword">
                                     <label class="form-check-label" for="showPassword">Show Password</label>
                                 </div>
 
                                 <div class="text-center">
-                                    <button class="btn btn-primary custom-input">Login</button>
+                                    <a href="#" class="btn btn-primary custom-input">Login</a>
                                     <hr class="custom-divider">
                                     <a href="#" class="nav-link">Forgot Password?</a>
                                 </div>
