minor changes logins

--- a/login_receptionist.html
+++ b/login_receptionist.html
@@ -33,7 +33,7 @@
                             <!-- login form  -->
                             <form>
                                 <input type="text" name="" id="" class="form-control my-4 py-2 mx-auto custom-input" placeholder="Username">
-                                <input type="password" name="" id="" class="form-control my-4 py-2 mx-auto custom-input" placeholder="Password">
+                                <input type="password" name="" id="password" class="form-control my-4 py-2 mx-auto custom-input" placeholder="Password">
                                 <div class="form-check custom-input mx-auto my-4 py-2">
                                     <input type="checkbox" class="form-check-input " id="showPassword">
                                     <label class="form-check-label" for="showPassword">Show Password</label>
