--- a/login_manager.html
+++ b/login_manager.html
@@ -19,18 +19,21 @@
                     </div>
                     <div class="col-12 col-md-6 m-auto">
                         <div class="card-body">
+                            <!-- logo and brand  -->
                             <div class="d-flex justify-content-center">
                                 <a href="#" class="d-flex justify-content-center align-items-center text-primary text-decoration-none pb-2 mb-md-0">
                                     <i class="fa-solid fa-hand-holding-heart display-6 me-sm-2"></i>
                                     <h1 class="display-4 d-none d-sm-inline">Aruga</h1>
                                 </a>
                             </div>
+                            <!-- welcome back  -->
                             <div class="d-flex justify-content-center">
                                 <h4>Welcome Back!</h4>
                             </div>
+                            <!-- login form  -->
                             <form>
                                 <input type="text" name="" id="" class="form-control my-4 py-2 mx-auto custom-input" placeholder="Username">
-                                <input type="password" name="" id="" class="form-control my-4 py-2 mx-auto custom-input" placeholder="Password">
+                                <input type="password" name="" id="password" class="form-control my-4 py-2 mx-auto custom-input" placeholder="Password">
                                 <div class="form-check custom-input mx-auto my-4 py-2">
                                     <input type="checkbox" class="form-check-input " id="showPassword">
                                     <label class="form-check-label" for="showPassword">Show Password</label>
