--- a/manager/room inventory/list-onchange.html
+++ b/manager/room inventory/list-onchange.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room (Manager) | Vacant Room List</title>
+    <title>Room (Manager) | On-Change Room List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
     <link rel="stylesheet" href="../../assets/css/roomnav.css">
@@ -121,7 +121,7 @@
                                 </li>
                                  <!-- vacant rooms-->
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text room_active">
+                                    <a href="#" class="nav-link align-middle nav_text ">
                                         <span class="ms-1 d-none d-sm-inline">Vacant Rooms</span>
                                     </a>
                                 </li>
@@ -133,7 +133,7 @@
                                 </li>
                                  <!-- on-change rooms-->
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text">
+                                    <a href="#" class="nav-link align-middle nav_text room_active">
                                         <span class="ms-1 d-none d-sm-inline">On-Change Rooms</span>
                                     </a>
                                 </li>
@@ -172,6 +172,7 @@
                             <th scope="col">Room Number</th>
                             <th scope="col">Room Type</th>
                             <th scope="col">Room Floor</th>
+                            <th scope="col">House keeping Staff</th>
                             <th scope="col"></th>
                             <th scope="col"></th>
                           </tr>
@@ -181,29 +182,25 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>Edit</td>
-                            <td>Delete</td>
+                            <td>Jeffrey Hugh</td>
                           </tr>
                           <tr data-bs-toggle="modal" data-bs-target="#det-modal">
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>Edit</td>
-                            <td>Delete</td>
+                            <td>Jeffrey Hugh</td>
                           </tr>
                           <tr data-bs-toggle="modal" data-bs-target="#det-modal">
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>Edit</td>
-                            <td>Delete</td>
+                            <td>Jeffrey Hugh</td>
                           </tr>
                           <tr data-bs-toggle="modal" data-bs-target="#det-modal">
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>Edit</td>
-                            <td>Delete</td>
+                            <td>Jeffrey Hugh</td>
                           </tr>
                         </tbody>
                     </table>
