--- a/manager/room inventory/list_allrooms.html
+++ b/manager/room inventory/list_allrooms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room (Manager) | Vacant Room List</title>
+    <title>Room (Manager) | All Room List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
     <link rel="stylesheet" href="../../assets/css/roomnav.css">
@@ -115,13 +115,13 @@
                             <ul class="nav nav-pills justify-content-between flex-shrink-0 mb-sm-auto mb-0 align-items-center align-items-sm-stretch " id="menu">
                                 <!-- all rooms-->
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text">
+                                    <a href="#" class="nav-link align-middle nav_text room_active">
                                         <span class="ms-1 d-none d-sm-inline">All Rooms</span>
                                     </a>
                                 </li>
                                  <!-- vacant rooms-->
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text room_active">
+                                    <a href="#" class="nav-link align-middle nav_text">
                                         <span class="ms-1 d-none d-sm-inline">Vacant Rooms</span>
                                     </a>
                                 </li>
@@ -172,6 +172,7 @@
                             <th scope="col">Room Number</th>
                             <th scope="col">Room Type</th>
                             <th scope="col">Room Floor</th>
+                            <th scope="col">Room Status</th>
                             <th scope="col"></th>
                             <th scope="col"></th>
                           </tr>
@@ -181,6 +182,7 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
+                            <td>Vacant</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -188,6 +190,7 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
+                            <td>Vacant</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -195,6 +198,7 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
+                            <td>Vacant</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -202,6 +206,7 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
+                            <td>Vacant</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
