--- a/manager/room inventory/list_outoforder.html
+++ b/manager/room inventory/list_outoforder.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room (Manager) | Vacant Room List</title>
+    <title>Room (Manager) | Out-of-Order Room List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
     <link rel="stylesheet" href="../../assets/css/roomnav.css">
@@ -121,7 +121,7 @@
                                 </li>
                                  <!-- vacant rooms-->
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text room_active">
+                                    <a href="#" class="nav-link align-middle nav_text ">
                                         <span class="ms-1 d-none d-sm-inline">Vacant Rooms</span>
                                     </a>
                                 </li>
@@ -139,7 +139,7 @@
                                 </li>
                                  <!-- out-of-order rooms-->
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text">
+                                    <a href="#" class="nav-link align-middle nav_text room_active">
                                         <span class="ms-1 d-none d-sm-inline">Out-of-Order Rooms</span>
                                     </a>
                                 </li>
