Added navigation for all list html in room inventory

--- a/manager/room inventory/list_outoforder.html
+++ b/manager/room inventory/list_outoforder.html
@@ -109,49 +109,56 @@
                 <div class="container mt-5">
                     <h2 class="display-6 fw-bold">Room</h2>
                 </div>
+                
                 <!-- Room Navigation -->
                 <div class="container mt-3">
-                        <div class="d-flex justify-content-between align-items-stretch pt-2 text-white">
-                            <ul class="nav nav-pills justify-content-between flex-shrink-0 mb-sm-auto mb-0 align-items-center align-items-sm-stretch " id="menu">
-                                <!-- all rooms-->
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text">
-                                        <span class="ms-1 d-none d-sm-inline">All Rooms</span>
-                                    </a>
-                                </li>
-                                 <!-- vacant rooms-->
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text ">
-                                        <span class="ms-1 d-none d-sm-inline">Vacant Rooms</span>
-                                    </a>
-                                </li>
-                                 <!-- occupied rooms-->
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text ">
-                                        <span class="ms-1 d-none d-sm-inline">Occupied Rooms</span>
-                                    </a>
-                                </li>
-                                 <!-- on-change rooms-->
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text">
-                                        <span class="ms-1 d-none d-sm-inline">On-Change Rooms</span>
-                                    </a>
-                                </li>
-                                 <!-- out-of-order rooms-->
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text room_active">
-                                        <span class="ms-1 d-none d-sm-inline">Out-of-Order Rooms</span>
-                                    </a>
-                                </li>
-                                 <!-- add a rooms-->
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link align-middle nav_text">
-                                        <span class="ms-1 d-none d-sm-inline">Add a Room</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                </div>  
+                    <div class="d-flex justify-content-between align-items-stretch pt-2 text-white">
+                        <ul class="nav nav-pills justify-content-between flex-shrink-0 mb-sm-auto mb-0 align-items-center align-items-sm-stretch " id="menu">
+                            <!-- all rooms-->
+                            <li class="nav-item line">
+                                <a href="#" class="nav-link align-middle nav_text">
+                                    <i class="fa-solid fa-bed me-sm-1 ms-2"></i>
+                                    <span class="d-none d-sm-inline">All Rooms</span>                        
+                                </a>
+                            </li>
+                            <!-- vacant rooms-->
+                            <li class="nav-item line">
+                                <a href="#" class="nav-link align-middle nav_text">
+                                    <i class="fa-solid fa-tags me-sm-1 ms-2"></i>
+                                    <span class="d-none d-sm-inline">Vacant Rooms</span>
+                                </a>
+                            </li>
+                            <!-- occupied rooms-->
+                            <li class="nav-item line">
+                                <a href="#" class="nav-link align-middle nav_text ">
+                                    <i class="fa-solid fa-house-lock me-sm-1 ms-2"></i>
+                                    <span class="ms-1 d-none d-sm-inline">Occupied Rooms</span>
+                                </a>
+                            </li>
+                            <!-- on-change rooms-->
+                            <li class="nav-item line">
+                                <a href="#" class="nav-link align-middle nav_text">
+                                    <i class="fa-solid fa-broom me-sm-1 ms-2"></i>
+                                    <span class="d-none d-sm-inline">On-Change Rooms</span>
+                                </a>
+                            </li>
+                            <!-- out-of-order rooms-->
+                            <li class="nav-item line">
+                                <a href="#" class="nav-link align-middle nav_text room_active">
+                                    <i class="fa-solid fa-circle-minus me-sm-1 ms-2 "></i>
+                                    <span class="d-none d-sm-inline">Out-of-Order Rooms</span>
+                                </a>
+                            </li>
+                            <!-- add a rooms-->
+                            <li class="nav-item ps-2">
+                                <a href="#" class="nav-link align-middle nav_text">
+                                    <i class="fa-solid fa-house-medical me-sm-1 ms-2"></i>
+                                    <span class="d-none d-sm-inline">Add a Room</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
                 <!-- Table -->
                 <div class="container shadow mt-3">
