--- a/manager/room inventory/room_add.html
+++ b/manager/room inventory/room_add.html
@@ -6,6 +6,7 @@
     <title>Room (Manager) | Add a Room</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
+    <link rel="stylesheet" href="/assets/css/roomnav.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
@@ -104,11 +105,60 @@
                     </nav>
                 </div>
 
-                <!-- start coding here  -->
+            <!-- start coding here  -->
+            <div class="container mt-5">
+              <h2 class="display-6 fw-bold">Room</h2>
+            </div>
 
-                <div class="container mt-5">
-                    <h2 class="display-6 fw-bold">Create Room</h2>
-                </div>
+             <!-- Room Navigation -->
+             <div class="container mt-3">
+              <div class="d-flex justify-content-between align-items-stretch pt-2 text-white">
+                  <ul class="nav nav-pills justify-content-between flex-shrink-0 mb-sm-auto mb-0 align-items-center align-items-sm-stretch " id="menu">
+                      <!-- all rooms-->
+                      <li class="nav-item line">
+                          <a href="#" class="nav-link align-middle nav_text ">
+                              <i class="fa-solid fa-bed me-sm-1 ms-2"></i>
+                              <span class="d-none d-sm-inline">All Rooms</span>                        
+                          </a>
+                      </li>
+                      <!-- vacant rooms-->
+                      <li class="nav-item line">
+                          <a href="#" class="nav-link align-middle nav_text">
+                              <i class="fa-solid fa-tags me-sm-1 ms-2"></i>
+                              <span class="d-none d-sm-inline">Vacant Rooms</span>
+                          </a>
+                      </li>
+                      <!-- occupied rooms-->
+                      <li class="nav-item line">
+                          <a href="#" class="nav-link align-middle nav_text ">
+                              <i class="fa-solid fa-house-lock me-sm-1 ms-2"></i>
+                              <span class="ms-1 d-none d-sm-inline">Occupied Rooms</span>
+                          </a>
+                      </li>
+                      <!-- on-change rooms-->
+                      <li class="nav-item line">
+                          <a href="#" class="nav-link align-middle nav_text">
+                              <i class="fa-solid fa-broom me-sm-1 ms-2"></i>
+                              <span class="d-none d-sm-inline">On-Change Rooms</span>
+                          </a>
+                      </li>
+                      <!-- out-of-order rooms-->
+                      <li class="nav-item line">
+                          <a href="#" class="nav-link align-middle nav_text">
+                              <i class="fa-solid fa-circle-minus me-sm-1 ms-2 "></i>
+                              <span class="d-none d-sm-inline">Out-of-Order Rooms</span>
+                          </a>
+                      </li>
+                      <!-- add a rooms-->
+                      <li class="nav-item ps-2">
+                          <a href="#" class="nav-link align-middle nav_text  room_active">
+                              <i class="fa-solid fa-house-medical me-sm-1 ms-2"></i>
+                              <span class="d-none d-sm-inline">Add a Room</span>
+                          </a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
 
                 <section class="mt-4">
                     <div class="container">
@@ -119,6 +169,7 @@
                             <a class="nav-link tab-pills" href="#">Finish</a>
                           </nav>
                         </div>
+
                         <div class="card-body">
                             <!-- Room Details tab -->
                           <div class="tab d-none">
