--- a/manager/room inventory/room_add.html
+++ b/manager/room inventory/room_add.html
@@ -118,42 +118,42 @@
                       <li class="nav-item line">
                           <a href="#" class="nav-link align-middle nav_text ">
                               <i class="fa-solid fa-bed me-sm-1 ms-2"></i>
-                              <span class="d-none d-sm-inline">All Rooms</span>                        
+                              <span class="">All Rooms</span>                        
                           </a>
                       </li>
                       <!-- vacant rooms-->
                       <li class="nav-item line">
                           <a href="#" class="nav-link align-middle nav_text">
                               <i class="fa-solid fa-tags me-sm-1 ms-2"></i>
-                              <span class="d-none d-sm-inline">Vacant Rooms</span>
+                              <span class="">Vacant Rooms</span>
                           </a>
                       </li>
                       <!-- occupied rooms-->
                       <li class="nav-item line">
                           <a href="#" class="nav-link align-middle nav_text ">
                               <i class="fa-solid fa-house-lock me-sm-1 ms-2"></i>
-                              <span class="ms-1 d-none d-sm-inline">Occupied Rooms</span>
+                              <span class="">Occupied Rooms</span>
                           </a>
                       </li>
                       <!-- on-change rooms-->
                       <li class="nav-item line">
                           <a href="#" class="nav-link align-middle nav_text">
                               <i class="fa-solid fa-broom me-sm-1 ms-2"></i>
-                              <span class="d-none d-sm-inline">On-Change Rooms</span>
+                              <span class="">On-Change Rooms</span>
                           </a>
                       </li>
                       <!-- out-of-order rooms-->
                       <li class="nav-item line">
                           <a href="#" class="nav-link align-middle nav_text">
                               <i class="fa-solid fa-circle-minus me-sm-1 ms-2 "></i>
-                              <span class="d-none d-sm-inline">Out-of-Order Rooms</span>
+                              <span class="">Out-of-Order Rooms</span>
                           </a>
                       </li>
                       <!-- add a rooms-->
                       <li class="nav-item ps-2">
                           <a href="#" class="nav-link align-middle nav_text  room_active">
                               <i class="fa-solid fa-house-medical me-sm-1 ms-2"></i>
-                              <span class="d-none d-sm-inline">Add a Room</span>
+                              <span class="">Add a Room</span>
                           </a>
                       </li>
                   </ul>
