--- a/manager/guest account/GA_editaccountinfo.html
+++ b/manager/guest account/GA_editaccountinfo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guest Account | John Doe</title>
+    <title>Edit Guest Account | John Doe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
     <link rel="stylesheet" href="../../assets/css/roomnav.css">
@@ -144,7 +144,7 @@
                             <div class="mb-3 row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold"></label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="">
+                                  <input type="text" class="form-control" id="" value="">
                                 </div>
                             </div> 
                             -->
@@ -152,28 +152,28 @@
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Full Name</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="John Doe">
+                                  <input type="text" class="form-control" id="" value="John Doe">
                                 </div>
                             </div> 
                             <!-- home address  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Home Address</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="123 Main Street Citytown, ST 12345 United States">
+                                  <input type="text" class="form-control" id="" value="123 Main Street Citytown, ST 12345 United States">
                                 </div>
                             </div> 
                             <!-- email address  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Email Address</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="johndoe@gmail.com">
+                                  <input type="text" class="form-control" id="" value="johndoe@gmail.com">
                                 </div>
                             </div> 
                             <!-- contact number  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Contact Number</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="(555) 123-4567">
+                                  <input type="text" class="form-control" id="" value="(555) 123-4567">
                                 </div>
                             </div> 
                         </div>
@@ -188,7 +188,7 @@
                             <div class="mb-3 row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold"></label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="">
+                                  <input type="text" class="form-control" id="" value="">
                                 </div>
                             </div> 
                             -->
@@ -196,35 +196,35 @@
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Check-In Date</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="2023/08/02">
+                                  <input type="text" class="form-control" id="" value="2023/08/02">
                                 </div>
                             </div> 
                             <!-- check out date  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Check-Out Date</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="2023/08/04">
+                                  <input type="text" class="form-control" id="" value="2023/08/04">
                                 </div>
                             </div> 
                              <!-- number of days  -->
                              <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Number of Days</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="2">
+                                  <input type="text" class="form-control" id="" value="2">
                                 </div>
                             </div> 
                             <!-- number of adults  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Number of Adults </label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="2">
+                                  <input type="text" class="form-control" id="" value="2">
                                 </div>
                             </div> 
                             <!-- number of children  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Number of Children </label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="3">
+                                  <input type="text" class="form-control" id="" value="3">
                                 </div>
                             </div> 
                         </div>
@@ -239,7 +239,7 @@
                             <div class="mb-3 row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold"></label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="">
+                                  <input type="text" class="form-control" id="" value="">
                                 </div>
                             </div> 
                             -->
@@ -247,14 +247,14 @@
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Room Type</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="Deluxe">
+                                  <input type="text" class="form-control" id="" value="Deluxe">
                                 </div>
                             </div>
                              <!-- room number  -->
                              <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Room Number</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="401">
+                                  <input type="text" class="form-control" id="" value="401">
                                 </div>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
                             <div class="mb-3 row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold"></label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="">
+                                  <input type="text" class="form-control" id="" value="">
                                 </div>
                             </div> 
                             -->
@@ -277,28 +277,28 @@
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Mode of Payment</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="Credit Card">
+                                  <input type="text" class="form-control" id="" value="Credit Card">
                                 </div>
                             </div> 
                             <!-- starting balance  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Starting Balance</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="3000">
+                                  <input type="text" class="form-control" id="" value="3000">
                                 </div>
                             </div> 
                             <!-- paid  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Paid</label>
                                 <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="Downpayment">
+                                  <input type="text" class="form-control" id="" value="Downpayment">
                                 </div>
                             </div> 
                             <!-- balance  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Balance</label>
                                 <div class="col-sm-10">
-                                    <input type="text" readonly class="form-control-plaintext" id="" value="2100">
+                                    <input type="text" class="form-control" id="" value="2100">
                                 </div>
                             </div> 
                         </div>
@@ -306,8 +306,8 @@
 
                     <!-- buttons  -->
                     <div class="d-grid gap-2 mt-5">
-                        <a href="#" class="btn btn-primary" type="button">Edit</a>
-                        <a href="#" class="btn btn-danger" type="button">Delete</a>
+                        <a href="#" class="btn btn-primary" type="button">Submit</a>
+                        <a href="#" class="btn btn-secondary" type="button">Cancel</a>
                     </div>
                 </div>
             </div>
