--- a/manager/guest account/GA_folio.html
+++ b/manager/guest account/GA_folio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guest Account | John Doe</title>
+    <title>Folio | John Doe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
     <link rel="stylesheet" href="../../assets/css/roomnav.css">
@@ -146,7 +146,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <table class="table foliotable">
+                            <table class="table tablefolio">
                                 <thead>
                                     <tr>
                                         <th>Description</th>
@@ -156,7 +156,7 @@
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
-                                <tbody class="foliotbody">
+                                <tbody class="tbodyfolio">
                                     <tr>
                                         <td>Room Accommodation</td>
                                         <td>1200</td>
