Edited the room inventory for manager

--- a/manager/room inventory/list_vacant.html
+++ b/manager/room inventory/list_vacant.html
@@ -179,6 +179,8 @@
                             <th scope="col">Room Number</th>
                             <th scope="col">Room Type</th>
                             <th scope="col">Room Floor</th>
+                            <th scope="col">Room Capacity</th>
+                            <th scope="col">Room Price</th>
                             <th scope="col"></th>
                             <th scope="col"></th>
                           </tr>
@@ -188,6 +190,8 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
+                            <td>6</td>
+                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -195,6 +199,8 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
+                            <td>6</td>
+                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -202,6 +208,8 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
+                            <td>6</td>
+                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -209,6 +217,8 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
+                            <td>6</td>
+                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
