--- a/manager/room inventory/room_add.html
+++ b/manager/room inventory/room_add.html
@@ -188,12 +188,17 @@
                               <label for="roomfloor" class="form-label fw-bold">Room Floor</label>
                               <input type="text" class="form-control" name="roomfloor" id="roomfloor" placeholder="Please enter room floor">
                             </div>
-                            <!-- Room Capacity  
+                            <!-- Room Capacity  -->
                             <div class="mb-3">
                                 <label for="roomcapacity" class="form-label fw-bold">Room Capacity</label>
                                 <input type="email" class="form-control" name="roomcapacity" id="roomcapacity" placeholder="Please enter room capacity">
-                              </div>--> 
-
+                            </div>
+                            <!-- Room Price -->
+                            <div class="mb-3">
+                                <label for="roomprice" class="form-label fw-bold">Room Price</label>
+                                <input type="email" class="form-control" name="roomprice" id="roomprice" placeholder="Please enter room price">
+                            </div>
+                            
 
                           </div>
                   
