--- a/manager/room inventory/room_edit.html
+++ b/manager/room inventory/room_edit.html
@@ -143,7 +143,21 @@
                                 <div class="col-sm-10">
                                   <input type="text" class="form-control" id="" value="4">
                                 </div>
-                            </div>                           
+                            </div>   
+                             <!-- Room Capacity   -->
+                             <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Capacity</label>
+                                <div class="col-sm-10">
+                                  <input type="text" class="form-control" id="" value="6">
+                                </div>
+                            </div>  
+                             <!-- Room Price   -->
+                             <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Floor</label>
+                                <div class="col-sm-10">
+                                  <input type="text" class="form-control" id="" value="2500">
+                                </div>
+                            </div>                          
                         </div>
 
                         <div class="card-footer text-end">
