--- a/manager/room inventory/detail_vacant.html
+++ b/manager/room inventory/detail_vacant.html
@@ -136,12 +136,26 @@
                                 <div class="col-sm-10">
                                   <input type="text" readonly class="form-control-plaintext" id="" value="Deluxe">
                                 </div>
-                            </div> 
+                            </div>                            
                             <!-- room floor  -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Room Floor</label>
                                 <div class="col-sm-10">
                                   <input type="text" readonly class="form-control-plaintext" id="" value="4">
+                                </div>
+                            </div> 
+                            <!-- room capacity -->
+                            <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Capacity</label>
+                                <div class="col-sm-10">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="6">
+                                </div>
+                            </div> 
+                            <!-- room price -->
+                            <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Price</label>
+                                <div class="col-sm-10">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="2500">
                                 </div>
                             </div> 
                         </div>
