--- a/manager/room inventory/list_allrooms.html
+++ b/manager/room inventory/list_allrooms.html
@@ -179,7 +179,9 @@
                             <th scope="col">Room Number</th>
                             <th scope="col">Room Type</th>
                             <th scope="col">Room Floor</th>
+                            <th scope="col">Room Capacity</th>
                             <th scope="col">Room Status</th>
+                            <th scope="col">Room Price</th>
                             <th scope="col"></th>
                             <th scope="col"></th>
                           </tr>
@@ -189,7 +191,9 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
+                            <td>6</td>
                             <td>Vacant</td>
+                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -197,7 +201,9 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>Vacant</td>
+                            <td>6</td>
+                            <td>Occupied</td>
+                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -205,7 +211,9 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
+                            <td>6</td>
                             <td>Vacant</td>
+                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -213,7 +221,9 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>Vacant</td>
+                            <td>6</td>
+                            <td>Occupied</td>
+                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
