--- a/manager/room inventory/detail_vacant.html
+++ b/manager/room inventory/detail_vacant.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
-    <title>Room (Manager) | Vacant Room Detail</title>
+    <title>Room 401 | Manager</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -143,21 +143,28 @@
                                 <div class="col-sm-10">
                                   <input type="text" readonly class="form-control-plaintext" id="" value="4">
                                 </div>
-                            </div> 
-                            <!-- room capacity -->
-                            <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Capacity</label>
-                                <div class="col-sm-10">
-                                  <input type="text" readonly class="form-control-plaintext" id="" value="6">
-                                </div>
-                            </div> 
+                            </div>  
                             <!-- room price -->
                             <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Price</label>
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Price</label>
                                 <div class="col-sm-10">
                                   <input type="text" readonly class="form-control-plaintext" id="" value="2500">
                                 </div>
                             </div> 
+                            <!-- room capacity -->
+                            <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Capacity</label>
+                                <div class="col-sm-10">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="6">
+                                </div>
+                            </div>
+                            <!-- room status -->
+                            <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Status</label>
+                                <div class="col-sm-10">
+                                  <input type="text" readonly class="form-control-plaintext" id="" value="Vacant">
+                                </div>
+                            </div>
                         </div>
                         <div class="card-footer text-end">
                             <div class="d-flex ">
