--- a/manager/room inventory/list_allrooms.html
+++ b/manager/room inventory/list_allrooms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room (Manager) | All Room List</title>
+    <title>All Rooms | Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
     <link rel="stylesheet" href="../../assets/css/roomnav.css">
@@ -179,9 +179,7 @@
                             <th scope="col">Room Number</th>
                             <th scope="col">Room Type</th>
                             <th scope="col">Room Floor</th>
-                            <th scope="col">Room Capacity</th>
                             <th scope="col">Room Status</th>
-                            <th scope="col">Room Price</th>
                             <th scope="col"></th>
                             <th scope="col"></th>
                           </tr>
@@ -191,9 +189,7 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>Vacant</td>
-                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -201,9 +197,7 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>Occupied</td>
-                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -211,9 +205,7 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>Vacant</td>
-                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -221,9 +213,7 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>Occupied</td>
-                            <td>2500</td>
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
