--- a/manager/room inventory/list_vacant.html
+++ b/manager/room inventory/list_vacant.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room (Manager) | Vacant Room List</title>
+    <title>Vacant Rooms | Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
     <link rel="stylesheet" href="../../assets/css/roomnav.css">
@@ -179,8 +179,8 @@
                             <th scope="col">Room Number</th>
                             <th scope="col">Room Type</th>
                             <th scope="col">Room Floor</th>
-                            <th scope="col">Room Capacity</th>
-                            <th scope="col">Room Price</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Capacity</th>
                             <th scope="col"></th>
                             <th scope="col"></th>
                           </tr>
@@ -190,8 +190,8 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>2500</td>
+                            <td>6</td>                            
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -199,8 +199,8 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>2500</td>
+                            <td>6</td>                            
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -208,8 +208,8 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>2500</td>
+                            <td>6</td>                            
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
@@ -217,8 +217,8 @@
                             <td>401</td>
                             <td>Deluxe</td>
                             <td>4</td>
-                            <td>6</td>
                             <td>2500</td>
+                            <td>6</td>                            
                             <td>Edit</td>
                             <td>Delete</td>
                           </tr>
