--- a/manager/room inventory/room_edit.html
+++ b/manager/room inventory/room_edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room (Manager) | Edit Room</title>
+    <title>Edit Room | Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
 </head>
@@ -137,6 +137,17 @@
                                   <input type="text" class="form-control" id="" value="Deluxe">
                                 </div>
                             </div> 
+                            <!-- room type  -->
+                            <div class="row">
+                                <label for="roomType" class="col-sm-2 col-form-label fw-bold">Room Type</label>
+                                <div class="col-sm-10">
+                                    <select class="form-select">
+                                        <option value="standard">Standard</option>
+                                        <option value="deluxe">Deluxe</option>
+                                        <option value="suite">Suite</option>
+                                      </select>
+                                </div>
+                            </div>
                             <!-- Room Floor   -->
                             <div class="row">
                                 <label for="" class="col-sm-2 col-form-label fw-bold">Room Floor</label>
@@ -146,14 +157,14 @@
                             </div>   
                              <!-- Room Capacity   -->
                              <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Capacity</label>
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Capacity</label>
                                 <div class="col-sm-10">
                                   <input type="text" class="form-control" id="" value="6">
                                 </div>
                             </div>  
                              <!-- Room Price   -->
                              <div class="row">
-                                <label for="" class="col-sm-2 col-form-label fw-bold">Room Floor</label>
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Price</label>
                                 <div class="col-sm-10">
                                   <input type="text" class="form-control" id="" value="2500">
                                 </div>
