changed headers in OD_tableview

--- a/manager/occupancy demand/OD_tableview.html
+++ b/manager/occupancy demand/OD_tableview.html
@@ -152,8 +152,7 @@
                             <th scope="col">Forecast ID</th>
                             <th scope="col">Date</th>
                             <th scope="col">Predicted Occupancy</th>
-                            <th scope="col">Is Low Demand</th>
-                            <th scope="col">Is High Demand</th>
+                            <th scope="col">Demand</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -161,36 +160,31 @@
                             <td>01</td>
                             <td>September 10</td>
                             <td>2.25</td>
-                            <td>True</td>
-                            <td>False</td>
+                            <td>Low</td>
                           </tr>
                           <tr>
                             <td>02</td>
                             <td>Septeber 18</td>
                             <td>2.25</td>
-                            <td>True</td>
-                            <td>False</td>
+                            <td>Low</td>
                           </tr>
                           <tr>
                             <td>03</td>
                             <td>October 02</td>
                             <td>2.25</td>
-                            <td>True</td>
-                            <td>False</td>
+                            <td>Low</td>
                           </tr>
                           <tr>
                             <td>03</td>
                             <td>November 12</td>
                             <td>2.25</td>
-                            <td>True</td>
-                            <td>False</td>
+                            <td>Low</td>
                           </tr>
                           <tr>
                             <td>03</td>
                             <td>November 25</td>
                             <td>2.25</td>
-                            <td>True</td>
-                            <td>False</td>
+                            <td>Low</td>
                           </tr>
                         </tbody>
                     </table>
