--- a/manager/promos and deals/promp_addPD.html
+++ b/manager/promos and deals/promp_addPD.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promo and Deal | Summer Getaway Special</title>
+    <title>Add a Promo or Deal | Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
 </head>
@@ -16,8 +16,7 @@
             <div class="col-auto col-md-3 col-xl-2 px-sm-2 bg-primary">
                 <div class="d-flex flex-column align-items-stretch px-2 pt-2 text-white min-vh-100">
                     <a href="#" class="d-flex justify-content-center align-items-center text-white text-decoration-none pb-2 mb-md-0">
-                        <i class="fa-solid fa-hand-holding-heart display-6 me-sm-2"></i>
-                        <h1 class="display-4 d-none d-sm-inline">Aruga</h1>
+                        <img src="../../assets/imgs/logo-white.png" alt="" width="70" height="70">
                     </a>
                     <ul class="nav nav-pills flex-column flex-shrink-0 mb-sm-auto mb-0 align-items-center align-items-sm-stretch" id="menu">
                         <li class="nav-item">
@@ -89,10 +88,13 @@
               
                       <!-- remove this div if there is no secondary navigation  -->
                       <div>
-                        <a class="navbar-brand text-dark sn-active" href="#">
-                          Promos and Deals
+                        <a class="navbar-brand text-dark" href="#">
+                            <img src="../../assets/imgs/logo-blue.png" alt="" height="60">
                         </a>
                         <a class="navbar-brand text-dark" href="#">
+                          Promos and Deals
+                        </a>
+                        <a class="navbar-brand text-dark sn-active" href="#">
                           Add a Promo or Deal
                         </a>
                       </div>
@@ -111,20 +113,20 @@
 
                 <!-- start coding here  -->
                 <div class="container mt-5">
-                    <div class="card mb-3">
-                        <img src="../../assets/imgs/promo1-image.jpg" class="card-img-top img-cover" alt="..." height="250">
-                        <div class="card-body">
-                            <h5 class="card-title fw-bold">Summer Getaway Special</h5>
-                            <p class="card-text">Escape to our luxurious hotel this summer and enjoy 20% off your stay! Immerse yourself in comfort, relax by the pool, and indulge in our exquisite dining options. Use promo code SummerGetaway20 to unlock this fantastic deal.</p>
-                            <a href="#" class="btn btn-secondary">SummerGetaway20</a>
-                        </div>
-                        <div class="card-footer text-end">
-                            <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary ms-3">Edit</button>
-                                <button class="btn btn-danger ms-3">Delete</button>
+                    <h2 class="display-6 fw-bold">Add a Promo or Deal</h2>
+                </div>
+
+                <div class="container mt-4">
+                    <a href="#" class="text-decoration-none">
+                        <div class="card text-white bg-primary mb-3" style="max-width: 22rem;">
+                            <div class="card-header d-flex flex-column align-items-center text-center">
+                                <i class="fa-solid fa-tag display-6"></i>
+                            </div>
+                            <div class="card-body d-flex flex-column align-items-center text-center">
+                                <h5 class="card-title">Click here<br>to add a promo or deal</h5>
                             </div>
                         </div>
-                      </div>
+                    </a>
                 </div>
             </div>
         </div>
