--- a/manager/promos and deals/PD_edit.html
+++ b/manager/promos and deals/PD_edit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add a Promo or Deal | Manager</title>
+    <title>Edit Promo and Deal | Summer Getaway Special</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../assets/sidenav/sidenav.css">
 </head>
@@ -16,8 +16,7 @@
             <div class="col-auto col-md-3 col-xl-2 px-sm-2 bg-primary">
                 <div class="d-flex flex-column align-items-stretch px-2 pt-2 text-white min-vh-100">
                     <a href="#" class="d-flex justify-content-center align-items-center text-white text-decoration-none pb-2 mb-md-0">
-                        <i class="fa-solid fa-hand-holding-heart display-6 me-sm-2"></i>
-                        <h1 class="display-4 d-none d-sm-inline">Aruga</h1>
+                        <img src="../../assets/imgs/logo-white.png" alt="" width="70" height="70">
                     </a>
                     <ul class="nav nav-pills flex-column flex-shrink-0 mb-sm-auto mb-0 align-items-center align-items-sm-stretch" id="menu">
                         <li class="nav-item">
@@ -90,9 +89,12 @@
                       <!-- remove this div if there is no secondary navigation  -->
                       <div>
                         <a class="navbar-brand text-dark" href="#">
-                          Promos and Deals
+                            <img src="../../assets/imgs/logo-blue.png" alt="" height="60">
                         </a>
                         <a class="navbar-brand text-dark sn-active" href="#">
+                          Promos and Deals
+                        </a>
+                        <a class="navbar-brand text-dark" href="#">
                           Add a Promo or Deal
                         </a>
                       </div>
@@ -111,21 +113,57 @@
 
                 <!-- start coding here  -->
                 <div class="container mt-5">
-                    <h2 class="display-6 fw-bold">Add a Promo or Deal</h2>
-                </div>
-
-                <div class="container mt-4">
-                    <a href="#" class="text-decoration-none">
-                        <div class="card text-white bg-primary mb-3" style="max-width: 22rem;">
-                            <div class="card-header d-flex flex-column align-items-center text-center">
-                                <i class="fa-solid fa-tag display-6"></i>
+                    <!-- edit promo card  -->
+                    <div class="card mt-5">
+                        <img src="../../assets/imgs/promo1-image.jpg" class="card-img-top img-cover" alt="..." height="250">
+                        <div class="card-body">
+                            <!-- 
+                            <div class="mb-3 row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold"></label>
+                                <div class="col-sm-10">
+                                  <input type="text" class="form-control" id="" value="">
+                                </div>
+                            </div> 
+                            -->
+                            <!-- promo code  -->
+                            <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Promo Code</label>
+                                <div class="col-sm-10">
+                                  <input type="text" class="form-control" id="" value="SummerGetaway20">
+                                </div>
+                            </div> 
+                            <!-- promo title  -->
+                            <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Promo Title</label>
+                                <div class="col-sm-10">
+                                  <input type="text" class="form-control" id="" value="Summer Getaway Special">
+                                </div>
+                            </div> 
+                            <!-- description  -->
+                            <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Description</label>
+                                <div class="col-sm-10">
+                                    <textarea class="form-control" id="" rows="3">Escape to our luxurious hotel this summer and enjoy 20% off your stay! Immerse yourself in comfort, relax by the pool, and indulge in our exquisite dining options. Use promo code SummerGetaway20 to unlock this fantastic deal.</textarea>
+                                </div>
                             </div>
-                            <div class="card-body d-flex flex-column align-items-center text-center">
-                                <h5 class="card-title">Click here<br>to add a promo or deal</h5>
+                            <!-- poster  -->
+                            <div class="row">
+                                <label for="" class="col-sm-2 col-form-label fw-bold">Poster</label>
+                                <div class="col-sm-10">
+                                    <input class="form-control" type="file" id="poster">
+                                </div>
                             </div>
                         </div>
-                    </a>
+                        <div class="card-footer text-end">
+                            <div class="d-flex justify-content-end">
+                                <button class="btn btn-primary ms-3">Submit</button>
+                                <button class="btn btn-secondary ms-3">Cancel</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
+                
             </div>
         </div>
     </div>
