--- a/mr/occupancy demand/OD_tableview.html
+++ b/mr/occupancy demand/OD_tableview.html
@@ -17,8 +17,7 @@
             <div class="col-auto col-md-3 col-xl-2 px-sm-2 bg-primary">
                 <div class="d-flex flex-column align-items-stretch px-2 pt-2 text-white min-vh-100">
                     <a href="#" class="d-flex justify-content-center align-items-center text-white text-decoration-none pb-2 mb-md-0">
-                        <i class="fa-solid fa-hand-holding-heart display-6 me-sm-2"></i>
-                        <h1 class="display-4 d-none d-sm-inline">Aruga</h1>
+                        <img src="../../assets/imgs/logo-white.png" alt="" width="70" height="70">
                     </a>
                     <ul class="nav nav-pills flex-column flex-shrink-0 mb-sm-auto mb-0 align-items-center align-items-sm-stretch" id="menu">
                         <li class="nav-item">
@@ -89,6 +88,9 @@
                     <nav class="navbar navbar-light bg-white shadow justify-content-between px-2 px-sm-5">
                          <!-- remove this div if there is no secondary navigation  -->
                       <div>
+                        <a class="navbar-brand text-dark" href="#">
+                            <img src="../../assets/imgs/logo-blue.png" alt="" height="60">
+                        </a>
                         <a class="navbar-brand text-dark sn-active" href="#">
                             Occupancy Demand
                         </a>
@@ -96,12 +98,14 @@
 
                       <!-- manager or receptionist  -->
                       <a class="navbar-brand text-dark" href="#">
-                        <i class="fa-solid fa-user-tie me-sm-2"></i>
+                        <!-- <i class="fa-solid fa-user-tie me-sm-2"></i>
                         <span class="ms-1 d-none d-sm-inline">Manager</span>
-                        <!--                    
+                                           
                         <i class="fa-solid fa-users me-sm-2"></i>
-                        <span class="ms-1 d-none d-sm-inline">Receptionist</span>
-                        -->
+                        <span class="ms-1 d-none d-sm-inline">Receptionist</span> -->
+                       
+                        <i class="fa-solid fa-users-between-lines me-sm-2"></i>
+                        <span class="ms-1 d-none d-sm-inline">Front Desk</span>
                       </a>
                     </nav>
                 </div>
